[gd_scene load_steps=16 format=2]

[ext_resource path="res://objects/UI/WinScreen/WinScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/2d/chainthing.png" type="Texture" id=2]
[ext_resource path="res://assets/OpenSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://objects/UI/WinScreen/metals.ogg" type="AudioStream" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=9]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="ProceduralSky" id=10]
sky_top_color = Color( 0.14902, 0.223529, 0.482353, 1 )
sky_horizon_color = Color( 0.847059, 0.694118, 0.952941, 1 )
sky_curve = 0.0182756
sky_energy = 0.5
ground_horizon_color = Color( 0.423529, 0.372549, 0.388235, 1 )
sun_latitude = 85.45
sun_energy = 0.0

[sub_resource type="Environment" id=11]
background_mode = 2
background_sky = SubResource( 10 )

[node name="WinScreen" type="Control"]
margin_left = 761.0
margin_top = -732.136
margin_right = 1242.0
margin_bottom = -13.1365
script = ExtResource( 1 )

[node name="WinBG" type="TextureRect" parent="."]
margin_left = -74.0
margin_top = -39.0
margin_right = 950.0
margin_bottom = 985.0
rect_scale = Vector2( 0.778011, 0.778011 )
texture = ExtResource( 2 )

[node name="SubmitName" type="LineEdit" parent="WinBG"]
margin_left = 356.0
margin_top = 356.0
margin_right = 658.0
margin_bottom = 420.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
align = 1
context_menu_enabled = false
placeholder_text = "ENTER NAME"
placeholder_alpha = 0.62

[node name="SubmitScore" type="Button" parent="WinBG"]
margin_left = 358.995
margin_top = 571.902
margin_right = 659.995
margin_bottom = 616.902
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_hover = Color( 0.8, 0.517647, 0.517647, 1 )
custom_colors/font_color_pressed = Color( 1, 0.298039, 0.298039, 1 )
disabled = true
text = "SUBMIT SCORE"

[node name="ViewLB" type="Button" parent="WinBG"]
margin_left = 356.339
margin_top = 656.207
margin_right = 660.339
margin_bottom = 701.207
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_hover = Color( 0.8, 0.517647, 0.517647, 1 )
custom_colors/font_color_pressed = Color( 1, 0.298039, 0.298039, 1 )
text = "LEADERBOARD"

[node name="QuitButton" type="Button" parent="WinBG"]
margin_left = 355.0
margin_top = 826.946
margin_right = 665.0
margin_bottom = 871.946
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_hover = Color( 0.8, 0.517647, 0.517647, 1 )
custom_colors/font_color_pressed = Color( 1, 0.298039, 0.298039, 1 )
text = "QUIT"

[node name="ReplayButton" type="Button" parent="WinBG"]
margin_left = 353.989
margin_top = 744.112
margin_right = 657.989
margin_bottom = 789.112
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_hover = Color( 0.8, 0.517647, 0.517647, 1 )
custom_colors/font_color_pressed = Color( 1, 0.298039, 0.298039, 1 )
text = "REPLAY"

[node name="SubmitMsg" type="Label" parent="WinBG"]
visible = false
margin_left = 356.021
margin_top = 685.103
margin_right = 660.021
margin_bottom = 706.103
text = "(OPENS BROWSER)"
align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="env" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )

[node name="Tween" type="Tween" parent="."]

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Voice" type="AudioStreamPlayer" parent="."]

[connection signal="text_changed" from="WinBG/SubmitName" to="." method="_on_SubmitName_text_changed"]
[connection signal="text_entered" from="WinBG/SubmitName" to="." method="_on_SubmitName_text_entered"]
[connection signal="pressed" from="WinBG/SubmitScore" to="." method="_on_SubmitScore_pressed"]
[connection signal="pressed" from="WinBG/ViewLB" to="." method="_on_ViewLB_pressed"]
[connection signal="pressed" from="WinBG/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="WinBG/ReplayButton" to="." method="_on_ReplayButton_pressed"]
